# BlazingRail

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: handler.rs  state.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  handler.rs  main.rs  state.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  models.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: batcher.rs  lib.rs  sink.rs
crates/pipeline/src/sinks/: file.rs  mod.rs
tests/k6/: load.js
